2006-01-12  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-lock.cc: New file.  Tests for locking.

	* schroot/sbuild-lock.cc (set_lock): If the current process
	doesn't own the lock, unlocking always succeeds.

2006-01-12  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-keyfile.cc: New file.  Tests for keyfile.

	* schroot/sbuild-keyfile.h
	(set_value): Insert stringstream value, rather than templated
	value.
	(set_list_value): Fix bug with iterator by using binary operator +
	rather than +=.
	(operator <<): Print newline after key-value pairs.

	* schroot/sbuild-keyfile.cc
	(keyfile): Add constructor taking no arguments.
	(print_comment:	Turn into static member function.

2006-01-11  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-environment.cc: New file.  Tests for environment.

	* test/testmain.cc (main): Add debugging checks.

	* test/Makefile.am (libtest_la_LIBADD): Add libsbuild.la, and
	remove from all binary LDADD lines.

	* schroot/sbuild-util.cc (strv_delete): New function moved from
	sbuild-session.cc, with the iterator type corrected.

	* schroot/sbuild-session.cc: Remove strv_delete.

	* schroot/sbuild-environment.h: Fix constness of overloaded
	operators, and correct use of lvalue in binary operators.

2006-01-11  Roger Leigh  <rleigh@debian.org>

	* Remove completed and obsolete TODO items.

	* test/sbuild-util.cc: Update testcase with fixed path.

	* schroot/sbuild-session.cc (run_child): Use new
	find_program_in_path syntax.

	* schroot/sbuild-util.cc (find_program_in_path): Add path
	argument, to allow use of paths other than $PATH.

2006-01-08  Roger Leigh  <rleigh@debian.org>

	* Update API reference.

	* test/sbuild-chroot-lvm-snapshot.cc: New file.  Tests for
	ChrootLvmSnapshot.

	* test/sbuild-chroot-block-device.cc: New file.  Tests for
	ChrootBlockDevice.

	* test/sbuild-chroot-plain.cc: New file. Tests for ChrootPlain.

	* test/test-sbuild-chroot.h: New file.  Base class for all chroot
	tests.
