@@ -31,6 +31,7 @@ noinst_PROGRAMS = 		\
 	sbuild-environment	\
 	sbuild-keyfile		\
 	sbuild-lock		\
+	sbuild-nostream		\
 	sbuild-util
 
 TESTS = $(noinst_PROGRAMS)
@@ -57,6 +58,9 @@ sbuild_keyfile_LDADD = libtest.la
 
 sbuild_lock_SOURCES = sbuild-lock.cc
 sbuild_lock_LDADD = libtest.la
+
+sbuild_nostream_SOURCES = sbuild-nostream.cc
+sbuild_nostream_LDADD = libtest.la
 
 sbuild_util_SOURCES = sbuild-util.cc
 sbuild_util_LDADD = libtest.la
