@@ -1,3 +1,10 @@
+2006-01-13  Roger Leigh  <rleigh@debian.org>
+
+	* test/sbuild-nostream.cc: New file.  Test for nostream.
+
+	* test/sbuild-environment.cc (add_simple_examples): Correct
+	assertion.
+
 2006-01-12  Roger Leigh  <rleigh@debian.org>
 
 	* test/sbuild-lock.cc: New file.  Tests for locking.
